# ethercat_device_configurator

./: CMakeLists.txt  package.xml
config/: my_setup.yaml
config/device_configurations/: opus.yaml
example_config/: my_setup.yaml
example_config/device_configurations/: opus.yaml
include/ethercat_device_configurator/: EthercatDeviceConfigurator.hpp
launch/: device_configurator.launch.py
src/: EthercatDeviceConfigurator.cpp  standalone.cpp
