<?xml version='1.0' encoding='utf-8'?>
<package format="2">

  <name>ethercat_device_configurator</name>
  <version>0.6.0</version>
  <description>Core C++ library to interface one or multiple drives. Contains abstract base classes for the communication interface.</description>

  <license>BSDv3</license>
  <author email="jungerj@student.ethz.ch">Jonas Junger</author>
  <author email="nachtigall@mavt.ethz.ch">Lennart Nachtigall</author>
  <maintainer email="jungerj@student.ethz.ch">Jonas Junger</maintainer>
  <maintainer email="nachtigall@mavt.ethz.ch">Lennart Nachtigall</maintainer>
  <url type="website">https://github.com/leggedrobotics/ethercat_device_configurator</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>anydrive</depend>
  <depend>rclcpp</depend>
  <depend>ethercat_sdk_master</depend>
  <depend>opus_ethercat_sdk</depend>
  <depend>elmo_ethercat_sdk</depend>
  <depend>maxon_epos_ethercat_sdk</depend>
  <depend>rokubimini_rsl_ethercat</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
